Fix layout on mobile

--- a/src/partials/posts-list/index.css
+++ b/src/partials/posts-list/index.css
@@ -23,7 +23,7 @@
   row-gap: 1rem;
   margin: 0 0 3rem 0;
   transition: 0.5s transform, 0.5s opacity, 0.5s max-height;
-  max-height: 10rem;
+  max-height: 50rem;
 }
 
 @media only screen and (min-width: 600px) {
@@ -32,6 +32,7 @@
     grid-template-columns: 1fr 1fr;
     grid-template-rows: auto;
     align-items: center;
+    max-height: 10rem;
   }
 }
 
